kubernetes/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vvp-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: vvp-deploy
