kubernetes/40-vvp-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vvp
  namespace: vvp-system
spec:
  parentRefs:
    - name: apps-gateway
      namespace: gateway-system
  hostnames:
    - vvp.apps.k8s.bnh.vn
  rules:
    - backendRefs:
        - name: api-gateway
          port: 8080
